add styling for header

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="UTF-8">
     <title>My New Website</title>
+    <link rel="stylesheet" type="text/css" href="./assets/style.css">   
   </head>
 
 
