add CSS sections

--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
       <!-- Headers -->
       <nav>
         <ul>
-            <li>Github</li>
-            <li>Portfolio</li>
-            <li>Contact</li>
+            <li class="menu-items">Github</li>
+            <li class="menu-items">Portfolio</li>
+            <li class="menu-items">Contact</li>
         </ul>
       </nav>
     </header>
 
-    <section>
+    <section class="section-1">
         <h1>My New Website</h1>
-        <h2>Created with persistence</h2>
+        <h3>Created with persistence</h2>
         <figure>
             <img src="#" alt="Coming soon sign">
             <figcaption>We just can't wait to meet you!</figcaption>
@@ -31,8 +31,8 @@
         
       
     </section>
-    <section>
-        <h2>Contact Us</h2>
+    <section class="section-2">
+        <h3>Contact Us</h2>
         <form>
             #
         </form>
