change colours scheme to match image

--- a/index.html
+++ b/index.html
@@ -24,15 +24,16 @@
         <h1>My New Website</h1>
         <h3>Created with persistence</h2>
         <figure>
-            <img src="#" alt="Coming soon sign">
+            <img src="./assets/image-1.png" alt="Coming soon sign">
+            <br>
+            <br>
             <figcaption>We just can't wait to meet you!</figcaption>
         </figure>
             <!-- Paragraph -->
-        
-      
     </section>
+
     <section class="section-2">
-        <h3>Contact Us</h2>
+        <h3>Contact Us</h3>
         <form>
             #
         </form>
